Fix overflow-y weirdness

--- a/src/css/components/layout.sass
+++ b/src/css/components/layout.sass
@@ -126,6 +126,7 @@ $sidebar-max-z-index: 100
   bottom: 0
   z-index: 20
   margin-top: auto
+  background-color: white
 
 ////////////////////////////////////////////////////////////////////////////////
 
